Time: 3 ms (31.31%), Space: 47.6 MB (5.86%) - LeetHub