@@ -1,12 +1,12 @@
 class Solution {
     List<List<Integer>> res = new LinkedList<>();
     public List<List<Integer>> allPathsSourceTarget(int[][] graph) {
-        List<Integer> path = new LinkedList<>();
+        LinkedList<Integer> path = new LinkedList<>();
         traverse(graph, 0, path);
         return res;
     }
     
-    public void traverse(int[][] graph, int s, List<Integer> path) {
+    public void traverse(int[][] graph, int s, LinkedList<Integer> path) {
         path.add(s);
         if (s == graph.length -1) {
             res.add(new LinkedList<>(path));
@@ -16,6 +16,6 @@ class Solution {
             traverse(graph, nb, path);
         }
         
-        path.remove(path.size()-1);
+        path.removeLast();
     } 
 }
